# makeprojects

./: .gitignore  .readthedocs.yaml  .travis.yml  Doxyfile  LICENSE.txt  MANIFEST.in  NEWS.txt  README.rst  build_rules.py  pyproject.toml  setup.py  tox.ini  upload.py
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-build.yml
docs/: Doxyfile  build_rules.py  build_rules_man.md  buildme_man.md  classes.rst  cleanme_dir.dot  cleanme_man.md  conf.py  constants.rst  functions.rst  index.rst  license.rst  prebuild.py  rebuildme_man.md  requirements.txt
makeprojects/: .projectsrc  __init__.py  __main__.py  __pkginfo__.py  build_objects.py  build_rules.py  buildme.py  cleanme.py  codeblocks.py  codewarrior.py  config.py  core.py  defaults.py  doxygen.py  enums.py  glsl_support.py  hlsl_support.py  makefile.py  makeprojects.py  makerez.py  masm_support.py  modules.py  ninja.py  projects.py  python.py  rebuildme.py  slicer.py  util.py  validators.py  visual_studio.py  visual_studio_2010.py  visual_studio_utils.py  visualstudio.py  watcom.py  watcom_util.py  xcode.py  xcode_utils.py
makeprojects/modules/: __init__.py
unittests/: test_cleanme.py  test_core.py  test_empty.py  test_enums.py  test_hello.py  test_idetypes.py  test_util.py  test_validators.py  test_visualstudio.py
unittests/assets/empty/: emptyv17.sln  emptyv22.sln  emptyvc7.sln  emptyvc8.sln
unittests/assets/hello/: hellov10win.sln  hellov12win.sln  hellov13win.sln  hellov15win.sln  hellov17win.sln  hellov17win10.sln  hellov19win.sln  hellov19win10.sln  hellovc7w32.sln  hellovc7win.sln  hellovc8win.sln  hellovc9win.sln
unittests/source/: helloworld.cpp
unittests/tests/: emptyv19.sln
