[build-system]
requires = ["setuptools", "burger"]
build-backend = "setuptools.build_meta"

[project]
dynamic = ["version"]
name = "makeprojects"
authors = [
    { name = "Rebecca Ann Heineman" },
    { email = "becky@burgerbecky.com" },
]
description = "IDE project generator for Visual Studio, XCode, etc..."
license = "MIT"
license-files = ["LICENSE.txt"]
dependencies = [
    "setuptools>=77.0.0",
    "enum34>=1.0.0",
    "burger>=1.3.1",
    "argparse>=1.0",
    "glob2>=0.6",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*"
readme = "README.rst"
keywords = [
    "burger",
    "perforce",
    "burgerlib",
    "development",
    "makeprojects",
    "xcode",
    "visual studio",
    "visualstudio",
    "codeblocks",
    "watcom",
    "ps3",
    "ps4",
    "ps5",
    "xboxone",
    "xbox360",
    "vita",
    "mac",
    "macosx",
    "ios",
    "android",
    "stadia",
    "nintendo",
    "switch"
]

[tool.setuptools.dynamic]
version = { attr = "makeprojects.__version__" }

[project.urls]
Homepage = "https://github.com/burgerbecky/makeprojects"
Documentation = "http://makeprojects.readthedocs.io"
Source = "https://github.com/burgerbecky/makeprojects"

[tool.setuptools.packages.find]
include = ["makeprojects"]
exclude = ["unittests"]
namespaces = false

[project.scripts]
makeprojects = "makeprojects.__main__:main"
buildme = "makeprojects.buildme:main"
cleanme = "makeprojects.cleanme:main"
rebuildme = "makeprojects.rebuildme:main"
